--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="portfolio/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
@@ -32,7 +32,7 @@
     </header>
     <div id="main">
         <div id="page">
-            <img src="./profile.enc" style="padding: 150px; border-radius: 50%;" alt=" ">
+            <img src="portfolio/profile.enc" style="padding: 150px; border-radius: 50%;" alt=" ">
             <div id="text">
                 <h2>Hello</h2>
                 <h1>I'm M.Sree Harish Kumar.</h1>
@@ -89,7 +89,7 @@
                     </div>
                     <div id="image">
                         <a href="your_ddestination_link_here">
-                            <img src="./vdst.jpg" alt="A tool made by using haar classifiers for traffic surveillance purposes">
+                            <img src="portfolio/vdst.jpg" alt="A tool made by using haar classifiers for traffic surveillance purposes">
                         </a>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                     </div>
                     <div id="image">
                         <a href="your_destination_link_here">
-                            <img src="./btifp.jpg" alt="A portal for farmers to maintain their commerce activities without any mediators">
+                            <img src="portfolio/btifp.jpg" alt="A portal for farmers to maintain their commerce activities without any mediators">
                         </a>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                     </div>
                     <div id="image">
                         <a href="https://harishmiriyala02.github.io/weather1/">
-                            <img src="./weather1.jpg" alt="A website to check weather at any city.">
+                            <img src="portfolio/weather1.jpg" alt="A website to check weather at any city.">
                         </a>
                     </div>
                 </div>
@@ -125,16 +125,16 @@
                 <p>Contact me</p>
                 <br>
                 <a class="btn" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">
-                    <img src="./Logo-gmail.webp" width="40px" height="40px">
+                    <img src="portfolio/Logo-gmail.webp" width="40px" height="40px">
                 </a>
                 <a class="btn" href="www.linkedin.com/in/sree-harish-kumar-m-376267274">
-                    <img src="./linkedin.png" width="40px" height="40px">
+                    <img src="portfolio/linkedin.png" width="40px" height="40px">
                 </a>
                 <a class="btn" href="https://github.com/HarishMiriyala02">
-                    <img src="./GitHub-logo.png" width="40px" height="40px">
+                    <img src="portfolio/GitHub-logo.png" width="40px" height="40px">
                 </a>
                 <a class="btn" href="https://www.instagram.com/miriyala.harishk/">
-                    <img src="./instagram.jpg" width="40px" height="40px">
+                    <img src="portfolio/instagram.jpg" width="40px" height="40px">
                 </a>
             </div>
             <div class="bottom-container">
